# senior-pomidor

./: .gitignore  AGENTS.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE_GITHUB_ISSUES_GUIDE.md  CREATE_GITHUB_ISSUES_VISUAL_GUIDE.md  FILE_NAVIGATION.md  GITHUB_ISSUES_EXPORT.md  GITHUB_ISSUES_FILES_SUMMARY.md  GITHUB_ISSUES_QUICK_START.md  GITHUB_ISSUES_SETUP_COMPLETE.md  INSTRUCTIONS.md  LICENSE  MVP_GITHUB_ISSUES.md  MVP_GITHUB_ISSUES_COMPLETE.md  PLANNED_FEATURES.md  README.md  SECURITY.md  SKILLS.md  STAGE1_GAP_FIXES_SUMMARY.md  TECHNICAL_SPECIFICATION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement_request.yml  feature_request.md  tomato_work_item.yml
.github/prompts/: plan-stage1ReadinessAssessment.prompt.md
.github/workflows/: tests.yml
brain/: __init__.py
brain/clock/: __init__.py  clock.py  real_clock.py  sim_clock.py
brain/contracts/: __init__.py  action_v1.py  anomaly_v1.py  device_status_v1.py  executor_event_v1.py  forecast_36h_v1.py  guardrail_result_v1.py  observation_v1.py  sampling_plan_v1.py  sensor_health_v1.py  state_v1.py  (+5 more)
docs/: anomaly_thresholds.md  codex_prompting_playbook.md  confidence_scoring.md  error_handling.md  how_to_create_issue.md  state_v1_weather_adapter_mapping.md
scripts/: create_github_issues.py  export_issues_for_manual_creation.py  generate_playground_demo_fixtures.py  simulate_day.py
tests/: __init__.py  test_playground_bridge_docs.py  test_project_metadata.py  test_release_notes_snapshot.py  test_smoke_import.py  test_specs.py  test_tooling_config.py
(+138 files in other folders)
